--- a/style.css
+++ b/style.css
@@ -1,3 +1,85 @@
-body {
+html {
+    font-size: 16px;
 
+}
+
+body {
+    
+}
+
+.wrapper {
+    display:flex;
+    height: 120px;
+    flex-wrap:wrap;
+    justify-content:center;
+    border-style: inset ;
+    border-color: black;
+}
+
+.page {
+    text-align: center;
+    font-size: 4rem;
+    align-items:center;
+}
+
+
+.rest {display:flex;
+    font-size: 2.5rem;
+    align-items:flex-end;
+}
+
+.wrapper > div{
+    background:#eee;
+    padding:1rem
+}
+
+.wrapper > div:nth-child(odd){
+    background:#ccc;
+}
+
+h1 {
+    text-align: center;
+    font-size: 8rem;
+}
+
+h2 {
+    text-align: center;
+    font-size: 2.5rem;
+}
+
+h3 {
+    text-align: center;
+    font-size: 1rem;
+}
+
+p {
+    text-align: center;
+    font-size: .6rem;
+}
+
+a {
+    border: none;
+    text-align: center;    
+}
+
+a:hover {
+   
+    outline: 10px black;
+    outline-offset: -4px;
+    outline-style: inset;
+}
+
+#pic {
+    width: 250px;
+    height: 250px;
+    text-align: center;
+    animation: pic 5s infinite;
+
+@keyframes pic {
+    50% {box-shadow: 10px 20px 30px blue;}
+}
+}
+
+div {
+    text-align: center;
 }
