--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html {
 }
 
 body {
+    margin: 0%;
     
 }
 
@@ -14,6 +15,10 @@ body {
     justify-content:center;
     border-style: inset ;
     border-color: black;
+    margin-left:20%;
+    margin-right: 20%;
+    margin-bottom: 2%;
+    overflow: hidden;
 }
 
 .page {
@@ -40,6 +45,7 @@ body {
 h1 {
     text-align: center;
     font-size: 8rem;
+    margin-bottom: 3%;
 }
 
 h2 {
@@ -63,9 +69,8 @@ a {
 }
 
 a:hover {
-   
     outline: 10px black;
-    outline-offset: -4px;
+    outline-offset: -20px;
     outline-style: inset;
 }
 
@@ -77,6 +82,11 @@ a:hover {
     height: 225px;
     animation: pics 5s infinite;
     animation: rotating 3s linear infinite;
+    
+}
+
+#picture {
+    border-radius: 70%;
 }
 
 @keyframes pics {
